--- a/public/login.html
+++ b/public/login.html
@@ -6,9 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>login</h2>
-    <input type="email" id="email" placeholder="email">
-    <input type="password" id="password" placeholder="password">
-    <button id="login">login</button>
+    <form id="loginForm">
+        <h2>login</h2>
+        <input type="email" id="email" name="email" placeholder="email" required>
+        <input type="password" id="password" name="password" placeholder="password" required>
+        <button type="submit" id="login">login</button>
+    </form>
+    <ul><a href="signup.html">signup</a></ul>
+    <ul><a href="home.html">home</a></ul>
+    <script src="js/login.js"></script>
 </body>
 </html>
