--- a/public/signup.html
+++ b/public/signup.html
@@ -6,19 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="signUpForm" enctype="multipart/form-data">
+    <form id="signupForm" enctype="multipart/form-data">
         <h2>signUp</h2>
-        <input type="text" id="fullname" placeholder="fullname">
-        <input type="text" id="username" placeholder="username">
-        <input type="email" id="email" placeholder="email">
-        <input type="tel" id="mobileno" placeholder="mobileno">
-        <input type="date" id="dateofbirth" placeholder="dateofbirth">
-        <input type="password" id="password" placeholder="password">
+        <input type="text" id="fullname" name="fullname" placeholder="fullname" required>
+        <input type="text" id="username" name="username" placeholder="username" required>
+        <input type="email" id="email" name="email" placeholder="email" required>
+        <input type="tel" id="mobileno" name="mobileno" placeholder="mobileno" required>
+        <input type="date" id="dateofbirth" name="dateofbirth" placeholder="dateofbirth" required>
+        <input type="password" id="password" name="password" placeholder="password" required>
         <label for="profilepic">Upload Image:</label>
-        <input type="file" id="profilepic" accept="image/*" >
-        <button id="signUp">signup</button>
+        <input type="file" id="profilepic" name="profilepic" accept="image/*" required>
+        <button type="submit" id="signUp">signup</button>
     </form>
-
+    <ul><a href="login.html">login</a></ul>
     <script src="js/signup.js"></script>
 </body>
 </html>
