wokring username pass, recieving the post content

--- a/public/home.html
+++ b/public/home.html
@@ -23,6 +23,7 @@
             <ul><a href="blog.html">Explore</a> </ul>
             <ul class="ComposeBtn">Start Writing</ul>
             <ul class="user-name"></ul>
+            <!-- <button class="SignInBtn" id="SignInBtn"><a href="login.html">Sign in</a> </button> -->
             <button class="SignInBtn" id="SignInBtn"><a href="login.html">Sign in</a> </button>
             <button class="SignOutBtn" id="SignOutBtn" style="display: none;">Sign out</button>
         </div>
