edit/delete functional

--- a/public/home.html
+++ b/public/home.html
@@ -33,7 +33,7 @@
         <img src="images/LandingPage/Main Banner.png" class="mainBannerImg" alt="mainBanner">
     </div>
 
-    <div class="recentBlogs">
+    <div class="recentBlogs" id="recentBlogs">
         <div class="blog-search">
             <p>recentBlogs</p>
             <input type="search" class="search" placeholder="Search">
