Functional blog pages, frontend updates

--- a/public/home.html
+++ b/public/home.html
@@ -100,7 +100,7 @@
             <div class="footer-para">
                 <p1>Lorem ispum<br>dolor sit amet consectetur.</p1>
                 <p2>Lorem ipsum dolor sit amet consectetur.<br>Euismod vulputate auctor eros diam interdum.</p2>
-                <button class="PostBtn" id="PostBtn"><a href="#compose">Start Writing</a> </button>
+                <button class="PostBtn" id="PostBtn">Start Writing</button>
             </div>
             <div class="footer-main">
                 <div class="footer-main-1">
@@ -128,7 +128,7 @@
             </div>
             <div class="bottom">
                 <P>Copyright @2024 - Blogger</P>
-                <button class="PostBtn" id="PostBtn"><a href="#compose">Start Writing</a> </button>
+                <button class="PostBtn2" id="PostBtn">Start Writing</button>
             </div>
         </div>
         <img src="images/LandingPage/Bottom.png" class="footerImg">
