--- a/public/home.html
+++ b/public/home.html
@@ -134,7 +134,7 @@
         <img src="images/LandingPage/Bottom.png" class="footerImg">
     </footer>
 
-    <script src="js/home.js"></script>
+    <script src="/js/home.js"></script>
     <!-- <script src="js/blog.js"></script>
     <script src="js/login.js"></script>
     <script src="js/signup.js"></script> -->
