local host working

--- a/public/blog.html
+++ b/public/blog.html
@@ -20,7 +20,7 @@
         <ul class="nav-logo">//Blogger.</ul>
         <div class="navs">
             <ul><a href="home.html">Home</a></ul>
-            <ul><a href="blog.html">Explore</a> </ul>
+            <ul><a href="home.html#recentBlogs">Explore</a> </ul>
             <ul class="ComposeBtn">Start Writing</ul>
             <ul class="user-name"></ul>
             <!-- <button class="SignInBtn" id="SignInBtn"><a href="login.html">Sign in</a> </button> -->
